# upwork-job-triage

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: rubric.yaml
examples/: jobs.json
src/triage/: cli.py  models.py  rubric.py  scorer.py
tests/: test_models.py  test_rubric.py  test_scorer.py
